--- a/index.html
+++ b/index.html
@@ -312,9 +312,18 @@
 
   <!-- New Cake Cart Section -->
   <section id="cake-cart">
-    <h2>Cake Cart</h2>
-    <p>Discover our elegant, mobile cake cart perfect for weddings and events. Featuring a white design with embroidered logo and a wooden sunshade roof, the cart is 1.2m wide, 1m tall, and 750mm deep, with wheels for easy movement.</p>
-    <img src="cake-cart.jpg" alt="Elegant Cake Cart" style="max-width:100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);" />
+    <h2>COMING SOON: Oh My Nosh Cake Cart</h2>
+  <p>A mobile slice of heaven is about to roll in...</p>
+  <p><strong>Elegant design. Gourmet treats. Unforgettable moments.</strong><br />
+     Perfect for birthdays, weddings, pop-ups—and all things sweet!</p>
+  <p>Get early access &amp; launch-day specials</p>
+  <button id="vipListBtn" style="background-color: #c08081; color: white; padding: 12px 24px; font-size: 1rem; border: none; border-radius: 30px; cursor: pointer; font-weight: 600;">
+    Join the VIP List
+  </button>
+  <p style="margin-top: 16px; font-style: italic; color: #666;">
+    Stay tuned. Something seriously delicious is headed your way!
+  </p>
+    <img src="cake-cart.png" alt="Elegant Cake Cart" style="max-width:100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);" />
   </section>
 
   <section id="contact">
